# ed25519-circuit

./: Cargo.toml
examples/: e2e_affine_mul_proof.rs  signature_equation_proof.rs  single_proof_affine_mul.rs
src/: affine.rs  api.rs  lib.rs  lookup.rs  non_native.rs  non_native_field.rs  pokos_api.rs  proof.rs  signature.rs  sound_affine.rs  sound_nonnative.rs  trace.rs
src/non_native_field/: air.rs  proof.rs  sound.rs
