[package]
name = "ed25519-circuit"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
p3-baby-bear = "0.4.2"
p3-field = "0.4.2"
rand = { version = "0.9", features = ["small_rng"] }

[dev-dependencies]
curve25519 = { path = "../ed25519-sol/curve25519", package = "curve25519-sol", default-features = false, features = ["precomputed-tables"] }

[patch.crates-io]
curve25519-derive-sol = { path = "../ed25519-sol/curve25519-derive" }
curve25519-sol = { path = "../ed25519-sol/curve25519" }
