[package]
name = "ed25519-circuit"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
p3-air = "0.4.2"
p3-baby-bear = "0.4.2"
p3-challenger = "0.4.2"
p3-commit = "0.4.2"
p3-dft = "0.4.2"
p3-field = "0.4.2"
p3-fri = "0.4.2"
p3-keccak = "0.4.2"
p3-matrix = "0.4.2"
p3-merkle-tree = "0.4.2"
p3-symmetric = "0.4.2"
p3-uni-stark = "0.4.2"
rand = { version = "0.9", features = ["small_rng"] }

[dev-dependencies]
curve25519 = { path = "../ed25519-sol/curve25519", package = "curve25519-sol", default-features = false, features = ["precomputed-tables"] }

[patch.crates-io]
curve25519-derive-sol = { path = "../ed25519-sol/curve25519-derive" }
curve25519-sol = { path = "../ed25519-sol/curve25519" }
